# cli-i

./: Cargo.toml
src/: lib.rs  main.rs  term.rs
src/app/: app.rs  builder.rs
src/common/: macros.rs
src/component/: component.rs  macros.rs  mod.rs
src/screen/: builder.rs  mod.rs  screen.rs
